@@ -23,4 +23,5 @@ Changes in current version:
  o Make autogen.sh script run correctly on systems where /bin/sh isn't bash. (Patch from Trond Norbye, rewritten by Hagne Mahre and then Hannah Schroeter.)
  o Skip calling gettime() in timeout_process if we are not in fact waiting for any events. (Patch from Trond Norbye)
  o Make test subdirectory compile under mingw.
+ o Fix win32 buffer.c behavior so that it is correct for sockets (which do not like ReadFile and WriteFile).
 
